--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppForMobDev">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".SelectMessageActivity"
+            android:exported="true" />
+        <activity
+            android:name=".CreateMessageActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ReceiveMessageActivity"
+            android:exported="true" />
+
     </application>
 
 </manifest>
