--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.appformobdev">
+    package="com.example.appformobdev" >
 
     <application
         android:allowBackup="true"
@@ -8,21 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppForMobDev">
+        android:theme="@style/Theme.AppForMobDev" >
+
         <activity
-            android:name=".SelectMessageActivity"
-            android:exported="true" />
-        <activity
-            android:name=".CreateMessageActivity"
+            android:name=".StopwatchActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ReceiveMessageActivity"
-            android:exported="true" />
 
     </application>
 
